tugas kurva